<resources>
    <string name="app_name">WhatAFridge</string>
    <string name="btnTxtFindRecipes">Find Recipe By Ingredients!</string>
    <string name="editTextHintText">Enter Ingredients</string>
    <string name="imgViewRecipeImg">Recipe Image</string>
    <string name="txtViewRecipeTitle">Details:</string>
    <string name="btnGetRecipe">View Recipe</string>>
    <string name="txtAppTitle">WhatAFridge</string>
    <string name="btnSearchPantry">Fridge Me!</string>
    <string name="textViewSeparator">-------------Or Search By Ingredients-------------</string>>
    <string name="web_client_id">262299247603-qh4ipvj319u36ertmd8toinahdf89cor.apps.googleusercontent.com</string>
    <string name="txtLoginWithGoogle">Login with Google</string>
    <string name="btnLoginWithougGoogle">Proceed without Login</string>
    <string name="textViewIngredientsTitle">Loading Recipe....</string>
    <string name="txtRecipeDetailPreparation">How to Prepare</string>
    <string name="txtOr">Or</string>
    <string name="txtLogin">Login</string>
    <string name="txtLoingIdHint">Enter your Email</string>
    <string name="txtPasswordHint">Enter Your Password</string>
    <string name="txtForgetPassword">Forget Password?</string>
    <string name="txtSignUp">Sign Up</string>

    <string name="txtUserID">UserID/Email</string>
    <string name="txtProfileNameHint">Enter Your Name</string>
    <string name="txtProfileAgeHint">Enter Your Age</string>
    <string name="txtProfileHeightHint">Enter Your Height</string>
    <string name="txtProfileName">Name</string>
    <string name="txtProfileAge">Age</string>
    <string name="txtProfileHeight">Height</string>
    <string name="txtProfileWeight">Weight</string>
    <string name="txtProfileWeightHint">Enter Your Weight</string>
    <string name="txtGlutenFree">GlutenFree</string>
    <string name="txtProfileTypeVegetarian">Type Of Vegetarian</string>
    <string name="txtSave">Save</string>

    <string name="txtUserid">Userid</string>
    <string name="txtPassword">Password</string>

    <string name="textViewMyRecipeTitle">Add Recipe\n</string>
    <string name="textViewMyRecipeName">Recipe Name</string>
    <string name="editTextMyRecipeName">Add Recipe Name</string>
    <string name="btnMyRecipe">My Recipe Page</string>
    <string name="btnSearchRecipe">Search Recipe</string>
    <string name="editTextMyRecipeSummary">Please enter Recipe Summary</string>
    <string name="editTextMyRecipeInstructions">Please Enter Recipe Instructions</string>
    <string name="textViewMyRecipeNumberOfIngredients">Enter Number of Ingredients</string>
    <string name="editTextIngredientName">Ingredient Name</string>
    <string name="editTextIngredientQtd">Enter Qtd</string>
    <string name="btnAddIngreds">Add</string>
    <string name="btnAddRecipe">Add Recipe</string>
    <string name="txtViewMyRecipeTitle">My Recipes</string>
    <string name="btnAddRecipeAct">Add Recipe</string>
    <string name="txtProfile">Profile</string>
    <string name="txtRegister">REGISTER</string>
    <string name="txtHintConfirmPassword">Confirm Password</string>
    <string name="txtHaveAccount">already have an account? Sign in</string>>
    <string name="txtCheckEmail">Enter Email correctly</string>>
    <string name="txtCheckPassword">Password does not matched.</string>

    <string name="txtVerification">Verification of Email</string>
    <string name="txtSendCode">Send Code</string>
    <string name="txtVerify">Verify</string>
    <string name="hintEnterCode">Enter Verification Code</string>
    <string name="txtVerifyTime">The code is valid in time.</string>>

    <string name="textViewMyFridgeTitle"> Add Fridge Items</string>
    <string name="editTextFridgeItemName">Item Name</string>
    <string name="editTextFridgeBestBefore">Best Before</string>
    <string name="editTextIngredientQuantity">Ingredient Quantity\n</string>
    <string name="btnAddFridge">Fridge</string>
    <string name="btnAddItem">Add Item</string>>


    <string-array name="typesOfVegetarians">
        <item>No Vegetarian</item>
        <item>Custom</item>
        <item>Lacto-ovo vegetarian</item>
        <item>Lacto-vegetarian</item>
        <item>Ovo-vegetarian</item>
        <item>Pescatarian</item>
        <item>Vegan</item>
    </string-array>

</resources>
