<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Views.ProfileActivity">

        <TextView
            android:id="@+id/txtViewVegetarian"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/txtProfileTypeVegetarian"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchGlutenFree" />

        <TextView
            android:id="@+id/txtViewWeight"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/txtProfileWeight"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextHeight" />

        <EditText
            android:id="@+id/editTextWeight"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/txtProfileWeightHint"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewWeight" />

        <EditText
            android:id="@+id/editTextHeight"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/txtProfileHeightHint"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewHeight" />

        <TextView
            android:id="@+id/txtViewHeight"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/txtProfileHeight"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextAge" />

        <ImageView
            android:id="@+id/imgViewProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/button_round" />

        <TextView
            android:id="@+id/textViewUserID"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txtUserID"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgViewProfile" />

        <EditText
            android:id="@+id/editTextProfileUserId"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/txtLoingIdHint"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewUserID" />

        <TextView
            android:id="@+id/txtViewName"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/txtProfileName"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextProfileUserId" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/txtProfileNameHint"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewName" />

        <TextView
            android:id="@+id/txtAge"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/txtProfileAge"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/txtProfileAgeHint"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAge" />

        <Switch
            android:id="@+id/switchGlutenFree"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:text="@string/txtGlutenFree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextWeight" />

        <Spinner
            android:id="@+id/spinnerTypeVegetarian"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:entries="@array/typesOfVegetarians"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewVegetarian" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewVegeType"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerTypeVegetarian" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/txtSave"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewVegeType" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>