<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.SearchRecipeActivity">

    <Button
        android:id="@+id/btnSearchFridge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btnSearchPantry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFindRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btnTxtFindRecipes"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFindRecipe"
        app:rippleColor="#FFFFFF" />

    <EditText
        android:id="@+id/editTextFindRecipe"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/editTextHintText"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btnFindRecipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/ListViewRecipe"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFindRecipe" />

    <LinearLayout

        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/editTextFindRecipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearchFridge"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        app:layout_constraintHorizontal_bias="0.0">

        <View
            android:id="@+id/viewLineLeft"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_weight="2"
            android:background="#666699" />

        <TextView
            android:id="@+id/txtViewOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtOr"
            android:textAlignment="center"
            android:textSize="20sp" />

        <View
            android:id="@+id/viewLineRight"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_weight="2"
            android:background="#666699" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>